# secchat

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  secchat-terminal.yml
client/: CMakeLists.txt  ClientMain.cpp  SecchatClient.cpp  SecchatClient.hpp  UserInterface.hpp
client/ui_ncurses/: UserInterface.cpp
client/ui_terminal/: UserInterface.cpp
cmake/: CompilerOptionsLinux.cmake  ExternalLibs.cmake  SecchatModes.cmake
crypto/: CMakeLists.txt  Crypto.cpp  Crypto.hpp
data_transport/: CMakeLists.txt  DataTransport.cpp  DataTransport.hpp  Session.cpp  Session.hpp
proto/: CMakeLists.txt  Proto.cpp  Proto.hpp
proto/protobuf/: CMakeLists.txt  SecProto.proto
server/: CMakeLists.txt  SecchatServer.cpp  SecchatServer.hpp  ServerMain.cpp
utils/: ByteArray.cpp  ByteArray.hpp  CMakeLists.txt  MutexProtectedData.hpp  Utils.cpp  Utils.hpp  WaitQueue.cpp  WaitQueue.hpp
